Wrap pre-formatted cancelation reasons to prevent page layout from blowing up

--- a/byceps/blueprints/core_admin/static/style/admin.css
+++ b/byceps/blueprints/core_admin/static/style/admin.css
@@ -578,6 +578,10 @@ table.activity-stream-item td:first-child {
   text-decoration: none;
 }
 
+.activity-stream-item pre {
+  white-space: pre-wrap;
+}
+
 .activity-stream-item .timestamp {
   font-size: 0.6875rem; /* 11px / 16px */
   text-align: right;
